[gd_scene load_steps=11 format=3 uid="uid://dv0wabcfx33yr"]

[ext_resource type="Script" path="res://Effects/VisualLaser.gd" id="1_jcahh"]
[ext_resource type="Material" uid="uid://b1l1e5ixugo22" path="res://Shaders/LaserBeam.tres" id="2_ybf7x"]
[ext_resource type="Material" uid="uid://cwmch7ysi23t" path="res://Shaders/LaserHit.tres" id="3_8d4i6"]
[ext_resource type="Material" uid="uid://bup3xmdlunoaa" path="res://Shaders/LaserOrigin.tres" id="4_8r8fx"]

[sub_resource type="ImmediateMesh" id="ImmediateMesh_snhcq"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fqv67"]
particle_flag_align_y = true
emission_shape = 2
emission_sphere_radius = 1.0
radial_velocity_min = -1.0
radial_velocity_max = -1.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -1.0
radial_accel_max = 0.5
attractor_interaction_enabled = false
scale_min = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_13eka"]
shading_mode = 0
disable_receive_shadows = true
point_size = 9.6

[sub_resource type="BoxMesh" id="BoxMesh_r7hmf"]
material = SubResource("StandardMaterial3D_13eka")
size = Vector3(0.01, 0.25, 0.01)

[sub_resource type="QuadMesh" id="QuadMesh_w8ysi"]

[sub_resource type="QuadMesh" id="QuadMesh_m7ahe"]

[node name="VisualLaser" type="Node3D"]
script = ExtResource("1_jcahh")

[node name="LaserGeometry" type="MeshInstance3D" parent="."]
material_override = ExtResource("2_ybf7x")
mesh = SubResource("ImmediateMesh_snhcq")

[node name="LaserParticles" type="GPUParticles3D" parent="."]
amount = 20
speed_scale = 2.0
process_material = SubResource("ParticleProcessMaterial_fqv67")
draw_pass_1 = SubResource("BoxMesh_r7hmf")

[node name="LaserOrigin" type="MeshInstance3D" parent="."]
transform = Transform3D(1.6556, 0, 0, 0, 1.6556, 0, 0, 0, 1.6556, 0, 0, 0)
material_override = ExtResource("4_8r8fx")
mesh = SubResource("QuadMesh_w8ysi")

[node name="LaserHit" type="MeshInstance3D" parent="."]
transform = Transform3D(2.52211, 0, 0, 0, 2.52211, 0, 0, 0, 2.52211, 0, 0, 0)
material_override = ExtResource("3_8d4i6")
mesh = SubResource("QuadMesh_m7ahe")

[node name="OmniLight3D" type="OmniLight3D" parent="LaserHit"]
light_color = Color(1, 0.419608, 0.419608, 1)
light_energy = 10.0
omni_range = 2.90187
